# xff

./: .bazelignore  .bazelrc  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  NOTICE  README.md  RULES.md  STYLE_CPP.md  TODO.md  XFF.md  xff-md-update.sh
.github/workflows/: main.yml  release.yml
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml
bazelmod/: dev.MODULE.bazel  llvm.MODULE.bazel
docs/: design-config.md  design-find-flavors.md  design-parallel.md  design.md  implementation-plan.md  test-plan.md
extra_modules/pcre2/: BUILD.bazel  MODULE.bazel  pcre2.MODULE.bazel  pcre2_backend.cc  pcre2_backend_test.cc
extra_modules/xff_extras_api/: BUILD.bazel  backend.h  notice.h
tools/: BUILD.bazel  align_markdown_tables.py  align_markdown_tables_test.py  check_bashtest_grep.sh  check_module_versions.py  check_module_versions_test.py  clang_format.sh  release_prep.sh  release_prep_test.sh  run_under_symbolizer.sh.in  trigger_release.sh  trigger_release_test.sh
xff/: BUILD.bazel  extras.bzl
xff/cli/: BUILD.bazel  alias_test.sh  cmp_test.sh  color_test.sh  content_test.sh  csv_test.sh  diff_golden.bzl  diff_test.sh  doc_renderer.cc  doc_renderer.h  doc_renderer_test.cc  exact_test.sh  exec_test.sh  exit_test.sh  explain_test.sh  extras_test.sh  full_binary_test.sh  full_extras_test.sh  globals.cc  globals.h  globals_test.cc  golden.bzl  grep_test.sh  hash_test.sh  help.cc  help.h  help_render_test.cc  help_test.sh  help_topic_test.sh  histogram_test.sh  ignore_files_test.sh  ignore_gitignore_test.sh  ignore_test.sh  lines_test.sh  ls_test.sh  main.cc  man_test.sh  manpage.cc  manpage.h  manpage_test.cc  (+11 more)
xff/cli/testdata/diff/: setup.sh
xff/cli/testdata/diff/golden/: c.txt  n.txt  u.txt  y.txt
xff/cli/testdata/walk/: setup.sh
xff/cli/testdata/walk/golden/: maxdepth1.txt  name_cc.txt  path_src.txt  printf_name.txt  printf_type.txt  prune_src.txt  regex_header.txt  type_f.txt
xff/color/: BUILD.bazel  color.cc  color.h  color_test.cc
xff/config/: BUILD.bazel  config.cc  config.h  config_test.cc  ini.cc  ini.h  ini_test.cc  loader.cc  loader.h  loader_test.cc  policy.cc  policy.h  policy_test.cc  xffrc.cc  xffrc.h  xffrc_test.cc
xff/conformance/: BUILD.bazel  conformance_test.cc
xff/content/: BUILD.bazel  line_match.cc  line_match.h  line_match_test.cc
xff/datetime/: BUILD.bazel  datetime.cc  datetime.h  datetime_test.cc
xff/engine/: BUILD.bazel  evaluate.cc  evaluate.h  evaluate_test.cc  run.cc  run.h  run_test.cc  walk.cc  walk.h  walk_test.cc
xff/examples/: BUILD.bazel  cookbook_test.sh
xff/exec/: BUILD.bazel  exec.cc  exec.h  exec_test.cc
xff/fields/: BUILD.bazel  fields.cc  fields.h  fields_test.cc
xff/format/: BUILD.bazel  format.cc  format.h  format_test.cc
xff/glob/: BUILD.bazel  glob.cc  glob.h  glob_test.cc
xff/golden/: BUILD.bazel  golden.bzl  golden_driver.sh
xff/golden/testdata/: README.md  basic_tree.sh  name_glob.xff.txt  printf_field.find.txt  printf_field.xff.txt  reject.find.txt  summary.find.txt  summary.xff.txt  type_f.find.txt
xff/hash/: BUILD.bazel  hash.cc  hash.h  hash_test.cc
xff/ignore/: BUILD.bazel  ignore.cc  ignore.h  ignore_test.cc
xff/language/: BUILD.bazel  language.cc  language.h  language_test.cc
xff/license/: BUILD.bazel  license.cc  license.h  license_test.cc
xff/mime/: BUILD.bazel  mime.cc  mime.h  mime_test.cc
xff/parser/: BUILD.bazel  ast.h  parser.cc  parser.h  parser_test.cc
xff/regex/: BUILD.bazel  backend.h  regex.cc  regex.h  regex_test.cc
xff/registry/: BUILD.bazel  descriptor.h  registry.cc  registry.h  registry_test.cc
xff/render/: BUILD.bazel  render.cc  render.h  render_test.cc
xff/repo/: BUILD.bazel  repo.cc  repo.h  repo_test.cc
xff/vfs/: BUILD.bazel  entry.h  filesystem.h  local_fs.cc  local_fs.h  local_fs_test.cc
xff_extras_api/: MODULE.bazel  backend.cc  notice.cc
