# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Module helly25_xff -- eXtended File Find."""

module(
    name = "helly25_xff",
    version = "0.0.0",
)

# Local-development modules: hermetic LLVM toolchain + clangd compile-commands.
# (Mirrors helly25/mbo; dev-only, not propagated to dependents.)
include("//bazelmod:dev.MODULE.bazel")
include("//bazelmod:llvm.MODULE.bazel")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "abseil-cpp", version = "20250814.2")
bazel_dep(name = "re2", version = "2025-11-05.bcr.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

# PCRE2 is a composable build extra (--regextype=PCRE2, #85): only //xff/cli:xff_full links its
# backend (extra_modules/pcre2), via a select on //xff:xff_pcre. bzlmod is lazy, so a lean build never
# fetches or compiles it. BSD-3-Clause (same family as re2 / googletest, no new license type).
bazel_dep(name = "pcre2", version = "10.47")

# helly25/mbo -- utility library and conventions reference, from the Bazel
# Central Registry. 0.11.1 carries the macOS clang+asan verification (#188) and
# the StatusIs code-matcher support (#190) our test conventions rely on.
bazel_dep(name = "helly25_mbo", version = "0.11.1")

# TEMPORARY override for -diff (#88) and -hash (#105): mbo 0.13.0 (not yet in the BCR; 0.12.0 is
# the latest release) carries mbo/diff's rich API (unified/context/normal/side-by-side formats,
# myers/naive/direct engines, the empty-time_format git-style header, ignore_missing_final_newline)
# and mbo/digest (the -hash algorithms). Pinned at the mbo main commit merging helly25/mbo#234.
# DROP THIS for a plain `bazel_dep(... version = "0.13.0")` bump the moment mbo 0.13.0 hits the BCR.
git_override(
    module_name = "helly25_mbo",
    commit = "55a6b2c8a36df9ab2a5f421e36f4c039478b4d94",
    remote = "https://github.com/helly25/mbo.git",
)

# helly25/bashtest -- shell-test runner (expect_* helpers + test_runner) for the
# binary-level CLI tests. Visible under its canonical name @helly25_bashtest.
bazel_dep(name = "helly25_bashtest", version = "0.5.0")
