# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Module helly25_xff -- eXtended File Find."""

module(
    name = "helly25_xff",
    version = "0.0.0",
)

# Local-development modules: hermetic LLVM toolchain + clangd compile-commands.
# (Mirrors helly25/mbo; dev-only, not propagated to dependents.)
include("//bazelmod:dev.MODULE.bazel")
include("//bazelmod:llvm.MODULE.bazel")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.21")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "abseil-cpp", version = "20250814.2")
bazel_dep(name = "re2", version = "2025-11-05.bcr.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

# The shared extras API (the RegexBackend plugin interface + PCRE2 registration slot), a local
# module both the xff core and every removable extra depend on - so an extra can be a standalone
# module without a dependency cycle back into the core. It names no heavy deps and is always built.
# It lives at the top level (NOT under extra_modules/, which holds only removable extras), so a
# minimal core archive can drop extra_modules/ wholesale. See xff_extras_api and TODO.md.
bazel_dep(name = "xff_extras_api", version = "0.0.0")
local_path_override(
    module_name = "xff_extras_api",
    path = "xff_extras_api",
)

# Composable build extras are standalone local modules under extra_modules/<name>, pulled via
# bazel_dep + local_path_override - so the core never names the extra's own external deps, and
# removing the bazel_dep line (or the whole directory) drops the extra entirely. PCRE2
# (--regextype=PCRE2, #85): only //xff/cli:xff_full links @xff_pcre2's backend (via the
# //xff:xff_pcre select), so bzlmod's laziness means a lean build never fetches or compiles @pcre2.
# The module depends on @xff_extras_api (resolved by the override above), never on the core.
#
# NOTE: because a local_path_override path is INSIDE the main repo tree, the main repo would ALSO
# glob it as its own package (//extra_modules/pcre2:...) - a dual view whose main-repo side can't see
# the module's @pcre2 dep. MODULE.bazel (and a REPO.bazel marker) do not stop that; `extra_modules`
# is in //.bazelignore so only @xff_pcre2 owns the dir. Keep new extra dirs under extra_modules/.
bazel_dep(name = "xff_pcre2", version = "0.0.0")
local_path_override(
    module_name = "xff_pcre2",
    path = "extra_modules/pcre2",
)

# helly25/mbo -- utility library and conventions reference, from the Bazel
# Central Registry. 0.13.0 adds mbo/diff (the rich diff API behind -diff, #88) and
# mbo/digest (the hash algorithms behind -hash, #105); it also carries the macOS
# clang+asan verification (#188) and StatusIs code-matcher support (#190) our tests rely on.
bazel_dep(name = "helly25_mbo", version = "0.13.0")

# helly25/bashtest -- shell-test runner (expect_* helpers + test_runner) for the
# binary-level CLI tests. Visible under its canonical name @helly25_bashtest.
bazel_dep(name = "helly25_bashtest", version = "0.5.0")
