# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""LLVM toolchain. clang-22 is the minimum supported toolchain for xff."""

# toolchains_llvm 1.8.0 includes PR bazel-contrib/toolchains_llvm#769 (macOS
# sanitizer runtime via `dynamic_runtime_lib` + `@loader_path` rpath), so
# macOS + clang-22 + asan works straight from the release.
bazel_dep(name = "toolchains_llvm", version = "1.8.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain_llvm",
    llvm_version = "22.1.7",  # clang-22 is the minimum (and only) supported toolchain rung.
    extra_llvm_distributions = {
        "LLVM-22.1.7-Linux-ARM64.tar.xz": "118ca2d3ad9da34367e05735317854e7977db45dc4c02a32af58da64c23b8789",
        "LLVM-22.1.7-Linux-X64.tar.xz": "edb0522b41e261819c06ea437d249f9b8acfa413d3805bc9920eec6fb76ff830",
        "LLVM-22.1.7-macOS-ARM64.tar.xz": "4177245188b0a30a6539c96b361dea56f253485756bfd8927a6a59e7301e7806",
        "clang+llvm-22.1.7-aarch64-pc-windows-msvc.tar.xz": "9957fee5aeba5f88369c37e127a07034eaa806c2e9e996b14ce5a32a9320653f",
    },
)
use_repo(llvm, "llvm_toolchain_llvm")

# NOTE: We deliberately do NOT `register_toolchains(...)` here. Bazel 9 always
# performs C++ toolchain resolution, so an unconditionally registered hermetic
# LLVM toolchain would be selected even for the `gcc`/`native` builds that omit
# `--config=clang`. Instead the toolchain is registered only under
# `--config=clang` via `--extra_toolchains` in `.bazelrc`.
