# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Build-time "composable extras" flags. Heavy / special dependencies are OFF by default so the
# stock `//xff/cli:xff` is a lean core; the extended `//xff/cli:xff_full` binary is composed from
# the same source tree by turning extras on. `bazel build --config=xff_full //xff/cli:xff_full` builds
# the full binary with every extra; a single extra can still be dropped from an otherwise-full
# build on the command line (e.g. `--config=xff_full --//xff:xff_pcre=false //xff/cli:xff_full`).
#
# Each extra is a self-registering backend target (under `extra_modules/`) that only `xff_full` links,
# via a `select()` on the extra's `config_setting`. Presence is detected at runtime from the
# registry the backend registers into (e.g. `xff::regex::Pcre2Available()`), so there is no
# `#ifdef` in the core and the lean binary simply never links the target - deleting the
# `extra_modules/` directory makes a `--//xff:xff_<extra>` build fail to compile while the lean build
# still builds. The matching CLI surface (`--regextype=PCRE2`, `--archive`, ...) is ALWAYS present;
# using an extra in a build that did not link it is a hard immediate error, never a silent no-op.
# See TODO.md "Composable-extras" and docs/design-config.md.

load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(default_visibility = ["//visibility:public"])

# --//xff:xff_archive -- link the archive-diving backend (libarchive; wired in #83). Default off.
# (Build flags carry the `xff_` package prefix, like the library flags in STYLE_CPP.md.)
bool_flag(
    name = "xff_archive",
    build_setting_default = False,
)

config_setting(
    name = "xff_archive_enabled",
    flag_values = {":xff_archive": "True"},
)

# --//xff:xff_pcre -- link the PCRE2 regex backend (extra_modules/pcre2; wired in #85). Default off, so
# only `xff_full` built with the extra on (`--config=xff_full`, or `--//xff:xff_pcre`) links it. Without
# it, `--regextype=PCRE2` is a usage error (never a silent RE2 fallback).
bool_flag(
    name = "xff_pcre",
    build_setting_default = False,
)

config_setting(
    name = "xff_pcre_enabled",
    flag_values = {":xff_pcre": "True"},
)

# `//xff` == the default (lean) binary. A convenience alias so `bazel run //xff -- ...` and
# `bazel build //xff` reach the stock tool without spelling out the //xff/cli:xff path; the full
# binary stays the explicit //xff/cli:xff_full.
alias(
    name = "xff",
    actual = "//xff/cli:xff",
)
