# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# The shared API surface that both the xff core and every removable extra depend on: the
# RegexBackend plugin interface + PCRE2 registration slot (and, later, the license-notice registry).
# It is its own Bazel module - not a core package - so an extra can be a real standalone module
# (bazel_dep on xff_extras_api + the extra's own external deps) without depending back into the xff
# core, which would be a cycle. The core and each extra both `bazel_dep` this; nothing here depends
# on the core. See TODO.md "Extras architecture v2".
module(
    name = "xff_extras_api",
    version = "0.0.0",
)

bazel_dep(name = "rules_cc", version = "0.2.21")
bazel_dep(name = "abseil-cpp", version = "20250814.2")
