# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# The real PCRE2 regex backend: the --regextype=PCRE2 build extra (#85), a target of the standalone
# @xff_pcre2 module (this directory's MODULE.bazel). It implements @xff_extras_api's RegexBackend and
# self-registers via Pcre2Registrar; it depends only on that shared API + @pcre2, never on the xff
# core. ONLY //xff/cli:xff_full links it, via `select({"//xff:xff_pcre_enabled": [...]})`; the lean
# binary and a default build never reference it, so bzlmod never fetches @pcre2 then. `alwayslink`
# keeps the self-registration translation unit from being dropped.
cc_library(
    name = "pcre2_backend",
    srcs = ["pcre2_backend.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "@pcre2",
        "@xff_extras_api//:license_notice",
        "@xff_extras_api//:regex_backend",
    ],
    alwayslink = True,
)

# Unit tests for the PCRE2 backend ops, exercised through the shared RegexBackend seam
# (MakePcre2Backend) so this stays module-local - no dependency on the xff core. The Matcher-level
# routing (Compile(kPcre2) -> this backend) is covered by //xff/cli:full_binary_test. It deps the
# backend directly (alwayslink), so the factory is always registered and this is config-agnostic;
# only a `@xff_pcre2//...` invocation (the CI test jobs, all --config=xff_full) reaches it, so no
# `manual` tag is needed - the xff core's `//...` never sees this separate module.
cc_test(
    name = "pcre2_backend_test",
    size = "small",
    srcs = ["pcre2_backend_test.cc"],
    deps = [
        ":pcre2_backend",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@helly25_mbo//mbo/testing:status_cc",
        "@xff_extras_api//:regex_backend",
    ],
)
