# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# The PCRE2 extra's external dependency, kept next to the extra it belongs to rather than in the
# root MODULE.bazel - so the CORE never names pcre2. The root `include()`s this segment; removing
# that include line (or this whole extra_modules/pcre2 directory) drops PCRE2 from the build
# entirely. Only //xff/cli:xff_full links the backend (via the //xff:xff_pcre select), so bzlmod's
# laziness means a lean build never fetches or compiles pcre2. BSD-3-Clause (same family as re2 /
# googletest, no new license type). See TODO.md "Extras architecture v2".
bazel_dep(name = "pcre2", version = "10.47")
