# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")

# The shared extras API, one target per seam. Both the xff core and each removable extra depend on
# these, so an extra never depends back into the core (which would be a cycle). `include_prefix`
# keeps each header's logical path (`xff/regex/backend.h`, `xff/license/notice.h`) unchanged.

# The RegexBackend plugin interface + PCRE2 registration slot. //xff/regex depends on this for the
# interface (Matcher::Compile(kPcre2) calls MakePcre2Backend); an extra backend implements
# RegexBackend and self-registers via Pcre2Registrar.
cc_library(
    name = "regex_backend",
    srcs = ["backend.cc"],
    hdrs = ["backend.h"],
    include_prefix = "xff/regex",
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

# The license-notice registration seam: components self-register a Notice via a file-scope
# Registrar, and Notices() returns them sorted. The xff core (//xff/license) registers its own
# deps and assembles NoticeText() on top; each extra self-registers its notice from its own TU.
cc_library(
    name = "license_notice",
    srcs = ["notice.cc"],
    hdrs = ["notice.h"],
    include_prefix = "xff/license",
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/algorithm:container",
    ],
)
