# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

cc_binary(
    name = "xff",
    srcs = ["main.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//xff/config:config_cc",
        "//xff/config:loader_cc",
        "//xff/engine:run_cc",
        "//xff/parser:parser_cc",
        "//xff/vfs:local_fs_cc",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

# Binary-level test of `xff --explain`: exercises cli/main.cc's real config
# wiring (XFF_CONFIG discovery -> resolve -> effective-config dump) end to end.
sh_test(
    name = "explain_test",
    size = "small",
    srcs = ["explain_test.sh"],
    data = [":xff"],
)
